fixed horizontal scroll on mobile screen

--- a/style.css
+++ b/style.css
@@ -440,7 +440,7 @@ header .logo h1{
 }
 
 footer{
-    padding: 0px 50px;
+    padding: 0px 10px;
 }
 
 footer .container .info{
